# excitertools

./: .coveragerc  .gitignore  README.md  README.rst  RELEASING.md  VERSION  atest.py  conf.py  excitertools.py  excitertools.rst  index.rst  insert_docstrings_into_readme.py  justfile  pyproject.toml  pytest.ini  regenerate_readme.py  requirements-test.txt  ruff.toml  setup.py
.github/workflows/: ci.yml  pythonapp.yml
examples/: demo01.py
excitertools/: __init__.py
sphinx-rst-builder-master/: .gitignore  CHANGELOG.rst  CONTRIBUTORS.rst  LICENSE.rst  MANIFEST.in  README.rst  generate-readme-and-changelog.sh  requirements-dev.txt  setup.cfg  setup.py
sphinx-rst-builder-master/docs/: conf_common.py
sphinx-rst-builder-master/docs/changelog/: CHANGELOG.rst  conf.py
sphinx-rst-builder-master/docs/readme/: README.rst
sphinx-rst-builder-master/src/sphinx_rst_builder/: __init__.py  _builder.py  _writer.py
tests/: test_aiter.py  test_applications.py  test_custom.py  test_fileinput.py  test_main.py  test_more_itertools.py  test_open.py
