[metadata]
name = sphinx-rst-builder
version = 0.0.1
description = Sphinx reStructuredText builder
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst, CONTRIBUTORS.rst
long_description_content_type = text/x-rst
license = BSD-2-Clause
license_file = LICENSE.rst
maintainer = David Fritzsche
maintainer_email = david.fritzsche@mvua.de
url = https://github.com/davidfritzsche/sphinx-rst-builder
platform = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation
    Topic :: Text Processing :: Markup
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Typing :: Typed

[options]
zip_safe = true
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    sphinx >= 2

[options.packages.find]
where=src
